glx/testdata/invalid/broken-references/vocabularies/confidence-levels.glx
../../../../../specification/5-standard-vocabularies/confidence-levels.glx